--- a/bolgpost.html
+++ b/bolgpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenido 2.0.</title>
+        <title>Bienvenido 2.0. es un blog de patos</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
